# FX-AlphaLab

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  04a_events_eda (1).ipynb  CLAUDE.md  CLOUDFLARE_FIX_SUMMARY.md  Dockerfile  FALSE_POSITIVE_FIX.md  HARDENING_SUMMARY.md  README.md  check_ohlcv.py  data.dvc  debug_output.html  docker-compose.yml  global_313_snapshot.txt  pyproject.toml  requirements.txt  verify_cloudflare_fix.py  verify_false_positive_fix.py  verify_hardening.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-checks.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema_all_9_tables.py  0002_auth_tables.py  3dee0b24c9f5_add_jsonb_columns_to_agent_signals.py
config/: sources.yaml
data/: eurusd_daily.csv  fx_data.db
data/ingestion/: base_collector.py  calendar_collector.py  ecb_collector.py  fred_collector.py  mt5_collector.py
data/manifests/: price_run_2026-02-08T11-27-12.948623+00-00.json
data/storage/: database.py  schema.sql
docs/: DATA_CONTRACTS.md  RUNBOOK.md  WEEK4_FREEZE.md  alpha_generator_pipeline.md  data_sources.md  database_setup.md  geopolitical_agent_pipeline.md  macro_agent_pipeline.md  module_c_outputs.md  mt5_setup.md  presentation_w6_sentiment_slides.md  report_generator_reference.md  sentiment_agent_pipeline.md  sentiment_node_audio_pipeline.md  sentiment_node_gdelt_pipeline.md  sentiment_node_google_trends_pipeline.md  sentiment_node_images_pipeline.md  sentiment_node_labeled_data_pipeline.md  sentiment_node_reddit_pipeline.md  sentiment_node_stocktwits_pipeline.md  technical_agent_pipeline.md
docs/ingestion/: README.md  boe.md  boe_scraper.md  calendar.md  ecb.md  ecb_collector.md  ecb_news.md  ecb_rates.md  ecb_scraper.md  fed.md  fed_scraper.md  forexfactory.md  fred.md  fred_collector.md  gdelt.md  google_trends.md  macro.md  mt5.md  overview.md
examples/: database_demo.py
frontend/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/electron/: main.js
frontend/hooks/: use-inference-data.ts  use-ohlcv.ts  use-resizable-layout.ts
frontend/lib/: agent-data.ts  api.ts  real-market-data.ts  report-html.ts  report-paths.ts
models/production/: gdelt_gat_final_states.pt
models/technical/: EURUSDm_D1.pkl  EURUSDm_H1.pkl  EURUSDm_H4.pkl  GBPUSDm_D1.pkl  GBPUSDm_H1.pkl  GBPUSDm_H4.pkl  USDCHFm_D1.pkl  USDCHFm_H1.pkl  USDCHFm_H4.pkl  USDJPYm_D1.pkl  USDJPYm_H1.pkl  USDJPYm_H4.pkl
models/trained/: rf_EURUSDm_D1.pkl  rf_EURUSDm_H4.pkl  rf_GBPUSDm_D1.pkl  rf_GBPUSDm_H4.pkl  rf_USDCHFm_D1.pkl  rf_USDCHFm_H4.pkl  (+14 more)
notebooks/: 01b_gdelt_event_explainer.ipynb  03b_capital_flows.ipynb  04_calendar_signal_validation.ipynb  04a_events_eda.ipynb  04b_risk_aversion.ipynb  04c_cot_positioning.ipynb  04d_google_trends.ipynb  04d_reddit_sentiment.ipynb  04e_stocktwits.ipynb  04sentimentanalysis.ipynb  05_module_c_macro_hybrid_var_lstm.ipynb  05_sentiment_eda.ipynb  06_sentiment_analysis.ipynb  06_silver_news_preprocessing.ipynb  07_calendar_events_first_model (2).ipynb  07_reddit_signal_collection.ipynb  08_reddit_eda.ipynb  08a_reddit_eda.ipynb  09_reddit_sentiment_labeling.ipynb  10_sentiment_ic_validation.ipynb  11_reddit_media_eda.ipynb  12_reddit_media_feature_engineering.ipynb  13_reddit_media_temporal_signals.ipynb  14_reddit_signal_validation.ipynb  15_reddit_labeled_eda.ipynb  16_reddit_labels_modeling_prep_eda.ipynb  17_gdelt_events_eda.ipynb  17_reddit_signal_modeling.ipynb  18_gdelt_events_modeling.ipynb  19_gdelt_events_forward_vol.ipynb  20_ohlcv_provider_comparison.ipynb  Chronos.ipynb  Comparison_of_CNNTransformer_and_LSTM_Models (1).ipynb  Forex_Factory_Economic_Calendar.ipynb  Kronos.ipynb  coordinator_01_signal_table.ipynb  coordinator_02_empirical_tests.ipynb  coordinator_03_predict.ipynb  coordinator_04_report.ipynb  coordinator_05_backtest.ipynb  (+7 more)
outputs/: reality_check_pvalue_GBPUSD_ret_1.txt  significance_summary_GBPUSD_ret_1.txt  spa_pvalue_GBPUSD_ret_1.txt
scripts/: aggregate_calendar_signals.py  audit_calendar_data_sources.py  audit_reaction_export.py  audit_reaction_findings.py  backfill_gold.py  build_calendar_state_snapshot.py  build_calendar_validation_notebook_part1.py  build_future_calendar_features.py  build_signal_table.py  collect_all_macro_series.py  collect_boe_data.py  collect_calendar_data.py  collect_ecb_data.py  collect_ecb_news_data.py  collect_forexfactory_data.py  collect_fred_data.py  collect_gdelt_data.py  collect_gdelt_gkg_data.py  collect_google_trends_data.py  collect_macro_data.py  collect_mt5_data.py  collect_news_data.py  compare_calendar_sources.py  database_demo.py  debug_backtest.py  demo_calendar_reaction.py  diagnose_calendar_reaction_labels.py  diagnose_mt5.py  diagnose_signal_usability.py  export_calendar_module_outputs.py  fix_cell57.py  fix_cell60_ff.py  fix_ff_cell.py  fix_notebook.py  fix_ohlcv_glob.py  fix_ohlcv_indent.py  gdelt_ic_analysis.py  migrate_gdelt_bronze.py  migrate_reddit_raw.py  migrate_stocktwits_raw.py  (+33 more)
shared/: config.py  utils.py
src/: __init__.py
tests/: conftest.py  test_backend.py  test_backend_integration.py  test_calendar_collector.py  test_calendar_currency_normalization.py  test_calendar_node.py  test_config.py  test_database.py  test_ecb_collector.py  test_fred_collector.py  test_gdelt_collector.py  test_gdelt_events_collector.py  test_gdelt_gkg_collector.py  test_inference.py  test_macro_agent.py  test_mt5_collector.py  test_mt5_connector.py  test_utils.py
(+253 files in other folders)
