[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "data*", "agents*", "backend*"]
exclude = ["tests*", "docs*", "notebooks*", "frontend*", "datasets*"]

[tool.setuptools]
py-modules = []

[project]
name = "fx-alphalab"
version = "0.1.0"
description = "Multi-Agent AI Framework for FX Market Analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "FX-AlphaLab Team"}
]

dependencies = [
    "pandas",
    "numpy",
    "python-dotenv",
    "requests",
    "beautifulsoup4",
    "fredapi",
    "sqlalchemy",
    "psycopg2-binary",
    "pytz",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "ipykernel",
]

notebook = [
    "jupyter",
    "matplotlib",
    "seaborn",
    "plotly",
    "yfinance",
]

mt5 = [
    "MetaTrader5",  # Windows only - for MT5 data ingestion
]

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
